syntax="proto3";
package com.grpc.print.message.service;
option java_multiple_files=true;

message PrintMessageRequest{
  string message=1;
}

message ServerResponse{
  string serverResponse = 2;
}

service PrintMessageService{
  rpc PrintMessage (PrintMessageRequest) returns (ServerResponse){}
}